argocd/base/argo-cd-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.services.sbling.net`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: no-verify-tls
  tls:
    secretName: argocd-services-sbling-net-prod-cert
